little fix for pricesbyCurrency product list does not use the min width of thumbs, if no thumbs are displayed added customfields-wrap and other css fixes (thx Stefan Schumacher)
git-svn-id: https://dev.virtuemart.net/svn/virtuemart/trunk/virtuemart@8926 87cc427b-4a1e-0410-b729-b2260ec0f063

--- a/components/com_virtuemart/assets/css/chosen.css
+++ b/components/com_virtuemart/assets/css/chosen.css
@@ -6,6 +6,7 @@
   font-size: 13px;
   zoom: 1;
   *display: inline;
+  max-width: 100%;
 }
 .chzn-container .chzn-drop {
   position: absolute;
